Big refactoring + Tree implementation
Fix node and tree abstraction

Add Avl tree implementation
Enhance unit tests coverage